// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`ui recordings snapshots recorded proxy outputs stay readable: north-star__swap-sim-ok 1`] = `
"Transaction scan on ethereum

┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│  Chain: ethereum                                                                                                                       │
│  Protocol: Uniswap (uniswap)                                                                                                           │
│  Action: Swap ETH → USDC                                                                                                               │
│  Decoded: swapExactTokensForTokens(uint256,uint256,address[],address,uint256) · args: amountIn=1, amountOutMin=1 · selector 0x12345678 │
│  Contract: Universal Router (0x66a9893cc07d91d95644aedd05d03f95e1dba8af)                                                               │
├────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤
│  🔗 EXPLORER LINKS                                                                                                                     │
│  - Contract: https://etherscan.io/address/0x66a9893cc07d91d95644aedd05d03f95e1dba8af                                                   │
├────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤
│  ✅ SAFE to continue.                                                                                                                   │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`ui recordings snapshots recorded proxy outputs stay readable: north-star__swap-sim-failed 1`] = `
"Transaction scan on ethereum

┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│  ⚡ FAST MODE — reduced provider coverage (Etherscan, GoPlus skipped)                                                                                                                                         │
│  Chain: ethereum                                                                                                                                                                                             │
│  Protocol: Uniswap (uniswap)                                                                                                                                                                                 │
│  Action: Swap ETH → USDC                                                                                                                                                                                     │
│  Contract: Universal Router (0x66a9893cc07d91d95644aedd05d03f95e1dba8af)                                                                                                                                     │
├──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤
│  🎯 RECOMMENDATION: ⛔ BLOCK (UNVERIFIED)                                                                                                                                                                     │
│  Why: Simulation didn't complete (Timeout), so balance and approval effects couldn't be fully verified.                                                                                                      │
│  Next step: rerun with full coverage (disable fast mode) before signing.                                                                                                                                     │
├──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤
│  🧾 CHECKS                                                                                                                                                                                                   │
│  Context: verified · age: — · txs: — · metadata: skipped in fast mode for latency                                                                                                                            │
│  ✓ Source verified                                                                                                                                                                                           │
│  ✓ Known protocol: Uniswap                                                                                                                                                                                   │
├──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤
│  🔗 EXPLORER LINKS                                                                                                                                                                                           │
│  - Contract, Allowlisted to: https://etherscan.io/address/0x66a9893cc07d91d95644aedd05d03f95e1dba8af                                                                                                         │
├──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤
│  🛡️ POLICY / ALLOWLIST                                                                                                                                                                                      │
│  ✓ Allowed protocol (soft): Uniswap                                                                                                                                                                          │
│  ✓ Allowlisted to: Universal Router (0x66a9893cc07d91d95644aedd05d03f95e1dba8af)                                                                                                                             │
│  Policy decision: BLOCK (simulation incomplete)                                                                                                                                                              │
├──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤
│  💰 BALANCE CHANGES (incomplete)                                                                                                                                                                             │
│  - Simulation didn't complete (Timeout)                                                                                                                                                                      │
│  - wallet fast-mode enabled; simulation skipped.                                                                                                                                                             │
│  - Balance changes unknown                                                                                                                                                                                   │
├──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤
│  🔐 APPROVALS (incomplete)                                                                                                                                                                                   │
│  - Couldn't verify approvals — treat with extra caution.                                                                                                                                                     │
├──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤
│  👉 VERDICT: ⛔ BLOCK (UNVERIFIED)                                                                                                                                                                            │
│  BLOCK — simulation coverage incomplete (simulation didn't complete (Timeout); balance coverage incomplete; approval coverage incomplete). Contributing notes: wallet fast-mode enabled; simulation skipped. │
│  Next step: rerun with full coverage (disable fast mode) before signing.                                                                                                                                     │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`ui recordings snapshots recorded proxy outputs stay readable: wallet-approve-usdc-unlimited-f7bf0220 1`] = `
"\x1B[37mTransaction scan on ethereum (wallet mode)\x1B[39m

┌─────────────────────────────────────────────────────────────────────────────────┐
│  Chain: ethereum                                                                │
│  Protocol: Circle USDC\x1B[37m (circle)\x1B[39m                                                 │
│  Action: Allow 0x0000...8BA3 to spend up to UNLIMITED USDC (0xa0b8...eb48)      │
│  Contract: FiatTokenProxy → FiatToken V2.2                                      │
├─────────────────────────────────────────────────────────────────────────────────┤
│  🧾 CHECKS                                                                      │
│ \x1B[32m ✓ Source verified\x1B[39m                                                              │
│ \x1B[33m ⚠️ Proxy / upgradeable (code can change)\x1B[39m                                       │
│ \x1B[32m ✓ Known protocol: Circle USDC\x1B[39m                                                  │
│  \x1B[33m⚠️ Upgradeable proxy (eip1967) - code can change\x1B[39m \x1B[37m[UPGRADEABLE]\x1B[39m                 │
│  \x1B[32m✓ Source code verified: FiatTokenProxy
\x1B[39m \x1B[37m[VERIFIED]\x1B[39m                             │
│  \x1B[32m✓ Recognized protocol: Circle USDC\x1B[39m \x1B[37m[KNOWN_PROTOCOL]\x1B[39m                            │
│  \x1B[33m⚠️ Unlimited token approval (max allowance)\x1B[39m \x1B[37m[UNLIMITED_APPROVAL]\x1B[39m               │
├─────────────────────────────────────────────────────────────────────────────────┤
│  💰 BALANCE CHANGES                                                             │
│ \x1B[33m - No balance changes detected (low confidence)\x1B[39m                                 │
├─────────────────────────────────────────────────────────────────────────────────┤
│  🔐 APPROVALS                                                                   │
│  \x1B[33m⚠️ Circle USDC FiatToken V2.2: UNLIMITED to 0x0000...8ba3\x1B[39m                      │
│  \x1B[33m⚠️ Allow 0x0000...8BA3 to spend up to UNLIMITED USDC (0xa0b8...eb48)\x1B[39m           │
├─────────────────────────────────────────────────────────────────────────────────┤
│  📊 RISK: \x1B[33mLOW\x1B[39m                                                     │
│ \x1B[33m ⚠️ INCONCLUSIVE: simulation low confidence — balances/approvals may be unknown\x1B[39m │
└─────────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`ui recordings snapshots recorded proxy outputs stay readable: north-star__policy-unknown-spender 1`] = `
"Transaction scan on ethereum

┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│  ⚡ FAST MODE — reduced provider coverage (Etherscan, GoPlus skipped)                                                           │
│  Chain: ethereum                                                                                                               │
│  Protocol: USDC                                                                                                                │
│  Action: Approve · token: USD Coin (0xa0b8...eb48) · spender: 0x9999...9999 · amount: UNKNOWN · call: approve(address,uint256) │
│  Decoded: approve(address,uint256) · args: spender=0x9999...9999, amount=MAX_UINT256 · selector 0x095ea7b3                     │
│  Contract: USD Coin (0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48)                                                               │
├────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤
│  🎯 RECOMMENDATION: 🚨 DANGER                                                                                                  │
│  Why: Policy blocked a non-allowlisted endpoint in this transaction.                                                           │
├────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤
│  🧾 CHECKS                                                                                                                     │
│  Context: verified · age: — · txs: — · metadata: skipped in fast mode for latency                                              │
│  ✓ Source verified                                                                                                             │
│  ⚠️ Unlimited token approval (max allowance) [UNLIMITED_APPROVAL]                                                              │
├────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤
│  🔗 EXPLORER LINKS                                                                                                             │
│  - Contract, Allowlisted to: https://etherscan.io/address/0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48                           │
│  - Spender, Action spender, Non-allowlisted spender: https://etherscan.io/address/0x9999999999999999999999999999999999999999   │
├────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤
│  🛡️ POLICY / ALLOWLIST                                                                                                        │
│  ✓ Allowed protocol (soft): USDC                                                                                               │
│  ✓ Allowlisted to: USD Coin (0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48)                                                       │
│  ⚠️ Non-allowlisted spender: Unknown spender (0x9999999999999999999999999999999999999999)                                      │
│  Policy decision: BLOCK                                                                                                        │
├────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤
│  💰 BALANCE CHANGES                                                                                                            │
│  - No net balance change detected                                                                                              │
├────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤
│  🔐 APPROVALS                                                                                                                  │
│  ⚠️ Allow 0x9999999999999999999999999999999999999999 to spend UNLIMITED USD Coin                                               │
│  - Mitigation: set exact allowance needed for this transaction.                                                                │
│  - After signing, revoke approval when no longer needed.                                                                       │
├────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤
│  👉 VERDICT: 🚨 DANGER                                                                                                         │
│  BLOCK — policy rules did not allow this transaction.                                                                          │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`ui recordings snapshots recorded proxy outputs stay readable: wallet-transferfrom-failed-8362e95e 1`] = `
"Transaction scan on ethereum

┌───────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│  Chain: ethereum                                                                                                  │
│  Protocol: Unknown                                                                                                │
│  Action: transferFrom(address,address,uint256)                                                                    │
│  Contract: ExampleToken                                                                                           │
├───────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤
│  🧾 CHECKS                                                                                                        │
│  ✓ Source verified                                                                                                │
│  ✓ Source code verified: ExampleToken [VERIFIED]                                                                  │
├───────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤
│  💰 BALANCE CHANGES                                                                                               │
│  - Simulation failed (execution reverted: transferFrom failed)                                                    │
│  - Balance changes unknown                                                                                        │
├───────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤
│  🔐 APPROVALS                                                                                                     │
│  - Approvals unknown (simulation failed)                                                                          │
├───────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤
│  📊 RISK: LOW                                                                                       │
│  ⚠️ INCONCLUSIVE: simulation failed (execution reverted: transferFrom failed) — balances/approvals may be unknown │
└───────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`ui recordings snapshots recorded proxy outputs stay readable: north-star__approve-unlimited-sim-not-run 1`] = `
"Transaction scan on ethereum

┌────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│  Chain: ethereum                                                                                           │
│  Protocol: USDC                                                                                            │
│  Action: Approve USDC allowance                                                                            │
│  Decoded: approve(address,uint256) · args: spender=0x0000...0002, amount=MAX_UINT256 · selector 0x095ea7b3 │
│  Contract: USD Coin (0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48)                                           │
├────────────────────────────────────────────────────────────────────────────────────────────────────────────┤
│  🎯 RECOMMENDATION: ⛔ BLOCK (UNVERIFIED)                                                                   │
│  Why: Simulation didn't run, so balance and approval effects couldn't be fully verified.                   │
│  Next step: rerun with full coverage (disable fast mode) before signing.                                   │
├────────────────────────────────────────────────────────────────────────────────────────────────────────────┤
│  🧾 CHECKS                                                                                                 │
│  Context: verified · age: — · txs: — · metadata: contract age/tx history unavailable from providers        │
│  ✓ Source verified                                                                                         │
│  ⚠️ Unlimited token approval (max allowance) [UNLIMITED_APPROVAL]                                          │
├────────────────────────────────────────────────────────────────────────────────────────────────────────────┤
│  🔗 EXPLORER LINKS                                                                                         │
│  - Contract: https://etherscan.io/address/0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48                       │
│  - Spender, Action spender: https://etherscan.io/address/0x0000000000000000000000000000000000000002        │
├────────────────────────────────────────────────────────────────────────────────────────────────────────────┤
│  💰 BALANCE CHANGES                                                                                        │
│  - Simulation data unavailable — treat with extra caution.                                                 │
├────────────────────────────────────────────────────────────────────────────────────────────────────────────┤
│  🔐 APPROVALS                                                                                              │
│  - Some approvals detected, but others may be missing:                                                     │
│  ⚠️ Allow 0x0000000000000000000000000000000000000002 to spend UNLIMITED USD Coin                           │
│  - Mitigation: set exact allowance needed for this transaction.                                            │
│  - After signing, revoke approval when no longer needed.                                                   │
├────────────────────────────────────────────────────────────────────────────────────────────────────────────┤
│  👉 VERDICT: ⛔ BLOCK (UNVERIFIED)                                                                          │
│  BLOCK — simulation coverage incomplete (simulation data unavailable).                                     │
│  Next step: rerun with full coverage (disable fast mode) before signing.                                   │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`ui recordings snapshots recorded proxy outputs stay readable: wallet-uniswap-swap-rlp-to-eth-fb2584e4 1`] = `
"\x1B[37mTransaction scan on ethereum (wallet mode)\x1B[39m

┌─────────────────────────────────────────────────────────────────────────────────┐
│  Chain: ethereum                                                                │
│  Protocol: Uniswap\x1B[37m (uniswap)\x1B[39m                                                    │
│  Action: Swap 1 RLP → 0.0005 ETH                                                │
│  Contract: UniversalRouter                                                      │
├─────────────────────────────────────────────────────────────────────────────────┤
│  🧾 CHECKS                                                                      │
│ \x1B[32m ✓ Source verified\x1B[39m                                                              │
│ \x1B[32m ✓ Known protocol: Uniswap\x1B[39m                                                      │
│  \x1B[32m✓ Source code verified: UniversalRouter\x1B[39m \x1B[37m[VERIFIED]\x1B[39m                             │
│  \x1B[32m✓ Recognized protocol: Uniswap\x1B[39m \x1B[37m[KNOWN_PROTOCOL]\x1B[39m                                │
├─────────────────────────────────────────────────────────────────────────────────┤
│  💰 BALANCE CHANGES                                                             │
│  - You sent 1 RLP                                                               │
│  - You received 0.0005 ETH                                                      │
│ \x1B[33m - Note: low confidence\x1B[39m                                                         │
├─────────────────────────────────────────────────────────────────────────────────┤
│  🔐 APPROVALS                                                                   │
│ \x1B[37m - None detected                 \x1B[39m                                               │
├─────────────────────────────────────────────────────────────────────────────────┤
│  📊 RISK: \x1B[33mLOW\x1B[39m                                                     │
│ \x1B[33m ⚠️ INCONCLUSIVE: simulation low confidence — balances/approvals may be unknown\x1B[39m │
└─────────────────────────────────────────────────────────────────────────────────┘
"
`;
